--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.0",
+    "broccoli-asset-rev": "0.3.1",
     "ember-autoresize": "^0.2.5",
-    "ember-cli": "^0.1.5",
+    "ember-cli": "0.1.2",
     "ember-cli-async-button": "^0.3.0",
-    "ember-cli-dependency-checker": "0.0.7",
-    "ember-cli-esnext": "0.1.1",
+    "ember-export-application-global": "^1.0.0",
     "ember-cli-google-analytics": "~1.1.0",
     "ember-cli-htmlbars": "^0.6.0",
     "ember-cli-ic-ajax": "0.1.1",
